feat: adding new loader, section-bg black overlay, new color and adding style for Embla Carousel

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,7 @@
   --color-base: #000000;
   --color-dark-900: #14213d;
   --color-accent-500: #fca311;
+  --color-yellow-gold: #c9a227;
   --color-gray-main: #e5e5e5;
 }
 
@@ -19,6 +20,7 @@
   --color-base: var(--color-base);
   --color-dark-900: var(--color-dark-900);
   --color-accent-500: var(--color-accent-500);
+  --color-yellow-gold: var(--color-yellow-gold);
   --color-gray-main: var(--color-gray-main);
 }
 
@@ -31,6 +33,14 @@ body {
   background-color: #e5e5e5;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%239d9d9d' fill-opacity='1'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
+
+.section-bg::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: #00000059;
+}
+
 .hero-section {
   background-image: url("/images/frankie-xjosJTK8u-c-unsplash.jpg");
 
@@ -45,14 +55,43 @@ body {
   background-color: #0000002d;
 }
 
-.section-bg::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: #0000002f;
+::selection {
+  background: #000;
+  color: white;
 }
 
-nav ul li a::before {
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  display: grid;
+}
+.loader::before,
+.loader::after {
+  content: "";
+  grid-area: 1/1;
+  --c: no-repeat radial-gradient(farthest-side, #25b09b 92%, #0000);
+  background:
+    var(--c) 50% 0,
+    var(--c) 50% 100%,
+    var(--c) 100% 50%,
+    var(--c) 0 50%;
+  background-size: 12px 12px;
+  animation: l12 1s infinite;
+}
+.loader::before {
+  margin: 4px;
+  filter: hue-rotate(45deg);
+  background-size: 8px 8px;
+  animation-timing-function: linear;
+}
+
+@keyframes l12 {
+  100% {
+    transform: rotate(0.5turn);
+  }
+}
+
+nav ul li a.nav-link::before {
   content: "";
   position: absolute;
   bottom: -3px;
@@ -61,7 +100,7 @@ nav ul li a::before {
   width: 0;
   @apply bg-yellow-600;
 }
-nav ul li a:hover:before {
+nav ul li a.nav-link:hover:before {
   width: 100%;
 }
 
@@ -95,7 +134,42 @@ nav ul li a:hover:before {
   bottom: -21px;
   left: 50%;
   transform: translateX(-50%);
-  @apply w-[12px] h-[12px] rounded-full bg-accent-500 shadow-[0_0_4px_1px_rgba(252,163,17,0.6)];
+  @apply bg-accent-500 h-[12px] w-[12px] rounded-full shadow-[0_0_4px_1px_rgba(252,163,17,0.6)];
+}
+
+.embla {
+  width: 450px;
+  max-width: 80vw;
+  height: 300px;
+  /* margin: auto; */
+}
+
+.embla__viewport {
+  overflow: hidden;
+  height: 100%;
+}
+
+.embla__container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.embla__slide {
+  flex: 0 0 100%;
+  min-height: 0;
+}
+
+.newsletter {
+  background-image: url("/images/luke-van-zyl-koH7IVuwRLw-unsplash.jpg");
+  position: relative;
+}
+
+.newsletter::before {
+  content: "";
+  background: #ffffff18;
+  inset: 0;
+  position: absolute;
 }
 
 .loading span {
